@@ -9,6 +9,7 @@
   with {section$key}
 - fix issue29 - correctly point to pytest explanation
   for importing modules fully qualified
+- fix issue32 - use --system-site-packages and don't pass --no-site-packages
 
 1.3
 -----------------
